RESOLVED FIXED49747
[chromium] code to show a popup externally is not unused and should be removed
https://bugs.webkit.org/show_bug.cgi?id=49747
Summary [chromium] code to show a popup externally is not unused and should be removed
Jay Civelli
Reported 2010-11-18 10:41:45 PST
The PopupMenuChromium class code that shows a popup externally is now unused. It was a hack only used on Mac (we were creating an invisible scroll view that would handle the mouse and keyboard events but the menu would be displayed natively). That code should be removed.
Attachments
Patch (8.74 KB, patch)
2010-11-18 10:45 PST, Jay Civelli
no flags
Jay Civelli
Comment 1 2010-11-18 10:45:45 PST
David Levin
Comment 2 2010-11-18 10:52:53 PST
Comment on attachment 74258 [details] Patch Seems fine. (No WebKit api change, so I'll r+.)
WebKit Commit Bot
Comment 3 2010-11-19 07:36:26 PST
The commit-queue encountered the following flaky tests while processing attachment 74258 [details]: fast/profiler/throw-exception-from-eval.html Please file bugs against the tests. These tests were authored by kmccullough@apple.com, oliver@apple.com, and timothy@apple.com. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2010-11-19 07:39:21 PST
Comment on attachment 74258 [details] Patch Clearing flags on attachment: 74258 Committed r72399: <http://trac.webkit.org/changeset/72399>
WebKit Commit Bot
Comment 5 2010-11-19 07:39:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.