2010-11-19  Jay Civelli  <jcivelli@chromium.org>

Reviewed by David Levin.

        [chromium] Removing the now unused code to show popup externally on Mac.
        https://bugs.webkit.org/show_bug.cgi?id=49747

        * page/chromium/ChromeClientChromium.h:
        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::PopupContainer::showPopup):
        (WebCore::PopupListBox::layout):
        (WebCore::PopupMenuChromium::show):
        * platform/chromium/PopupMenuChromium.h:
2010-11-19  Jay Civelli  <jcivelli@chromium.org>

        Reviewed by David Levin.

        Removing unused code to show popup externally on Mac.
        https://bugs.webkit.org/show_bug.cgi?id=49747

        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::popupOpened):
        * src/ChromeClientImpl.h:

Canonical link: https://commits.webkit.org/62861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72399 268f45cc-cd09-0410-ab3c-d52691b4dbfc